--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -214,6 +214,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\utilities\disable_unnecessary_warnings.hpp" />
     <ClInclude Include="src\utilities\utils.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
