--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="src\bu\disable_unnecessary_warnings.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\lexer\token.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
