--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -216,6 +216,7 @@
   <ItemGroup>
     <ClInclude Include="src\bu\disable_unnecessary_warnings.hpp" />
     <ClInclude Include="src\bu\utilities.hpp" />
+    <ClInclude Include="src\lexer\token.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
