--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="src\lexer\token.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\bu\formatting.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
