--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\lexer\lexer_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\lexer\token_formatting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -38,13 +41,13 @@
     <ClInclude Include="src\lexer\token.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\bu\formatting.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\lexer\lexer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\lexer\lexer_test.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\lexer\token_formatting.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
