--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -217,6 +217,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ast\ast.hpp" />
+    <ClInclude Include="src\ast\nodes\expression.hpp" />
+    <ClInclude Include="src\ast\nodes\pattern.hpp" />
+    <ClInclude Include="src\ast\nodes\definition.hpp" />
+    <ClInclude Include="src\ast\nodes\type.hpp" />
     <ClInclude Include="src\bu\disable_unnecessary_warnings.hpp" />
     <ClInclude Include="src\bu\utilities.hpp" />
     <ClInclude Include="src\bu\wrapper.hpp" />
