--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -201,6 +201,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\ast\ast_formatting.cpp" />
     <ClCompile Include="src\lexer\lexer.cpp" />
     <ClCompile Include="src\lexer\lexer_test.cpp" />
     <ClCompile Include="src\lexer\token_formatting.cpp" />
@@ -218,6 +219,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ast\ast.hpp" />
+    <ClInclude Include="src\ast\ast_formatting.hpp" />
     <ClInclude Include="src\ast\nodes\expression.hpp" />
     <ClInclude Include="src\ast\nodes\pattern.hpp" />
     <ClInclude Include="src\ast\nodes\definition.hpp" />
