--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\parser\internals\parse_type.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\bu\source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\parser\internals\parser_internals.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\bu\source.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
