Added support for cross-platform(ish) colored output

--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\bu\textual_error.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\bu\color.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\bu\textual_error.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\bu\color.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
