--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -119,5 +119,8 @@
     <ClInclude Include="src\bu\color.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\bu\uninitialized.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
