--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -241,6 +241,7 @@
     <ClInclude Include="src\bu\disable_unnecessary_warnings.hpp" />
     <ClInclude Include="src\bu\pooled_string.hpp" />
     <ClInclude Include="src\bu\source.hpp" />
+    <ClInclude Include="src\bu\uninitialized.hpp" />
     <ClInclude Include="src\bu\utilities.hpp" />
     <ClInclude Include="src\bu\wrapper.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
