--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -125,5 +125,8 @@
     <ClInclude Include="src\bu\noisy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\bu\bytestack.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
