--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -237,6 +237,7 @@
     <ClInclude Include="src\ast\nodes\pattern.hpp" />
     <ClInclude Include="src\ast\nodes\definition.hpp" />
     <ClInclude Include="src\ast\nodes\type.hpp" />
+    <ClInclude Include="src\bu\bytestack.hpp" />
     <ClInclude Include="src\bu\color.hpp" />
     <ClInclude Include="src\bu\disable_unnecessary_warnings.hpp" />
     <ClInclude Include="src\bu\noisy.hpp" />
