Added vm::Virtual_machine and vm::Bytecode

--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\bu\color.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\virtual_machine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -126,6 +129,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\bu\bytestack.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\virtual_machine.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\bytecode.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
