--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -229,6 +229,7 @@
     <ClCompile Include="src\parser\internals\parse_type.cpp" />
     <ClCompile Include="src\parser\parser.cpp" />
     <ClCompile Include="src\parser\parser_test.cpp" />
+    <ClCompile Include="src\vm\virtual_machine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ast\ast.hpp" />
@@ -254,6 +255,8 @@
     <ClInclude Include="src\parser\parser.hpp" />
     <ClInclude Include="src\parser\internals\parser_internals.hpp" />
     <ClInclude Include="src\parser\parser_test.hpp" />
+    <ClInclude Include="src\vm\bytecode.hpp" />
+    <ClInclude Include="src\vm\virtual_machine.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
