--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="src\parser\parser_test.cpp" />
     <ClCompile Include="src\vm\virtual_machine.cpp" />
     <ClCompile Include="src\vm\vm_formatting.cpp" />
+    <ClCompile Include="src\vm\vm_test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ast\ast.hpp" />
@@ -260,6 +261,7 @@
     <ClInclude Include="src\vm\opcode.hpp" />
     <ClInclude Include="src\vm\virtual_machine.hpp" />
     <ClInclude Include="src\vm\vm_formatting.hpp" />
+    <ClInclude Include="src\vm\vm_test.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
