--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\vm\vm_formatting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\vm_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -144,6 +147,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\vm\vm_formatting.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\vm_test.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
