--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\vm\vm_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ast\nodes\namespace.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\vm\vm_test.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ast\nodes\namespace.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
