Added parser support for function definitions

--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\ast\nodes\namespace.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\parser\parse_definition.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
