--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -211,7 +211,7 @@
     </ClCompile>
     <ClCompile Include="src\bu\source.cpp" />
     <ClCompile Include="src\lexer\lexer.cpp" />
-    <ClCompile Include="src\lexer\lexer_test.cpp" />
+    <ClCompile Include="src\tests\lexer_test.cpp" />
     <ClCompile Include="src\bu\textual_error.cpp" />
     <ClCompile Include="src\lexer\token_formatting.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -229,10 +229,11 @@
     <ClCompile Include="src\parser\internals\parse_pattern.cpp" />
     <ClCompile Include="src\parser\internals\parse_type.cpp" />
     <ClCompile Include="src\parser\parser.cpp" />
-    <ClCompile Include="src\parser\parser_test.cpp" />
+    <ClCompile Include="src\tests\parser_test.cpp" />
+    <ClCompile Include="src\tests\tests.cpp" />
     <ClCompile Include="src\vm\virtual_machine.cpp" />
     <ClCompile Include="src\vm\vm_formatting.cpp" />
-    <ClCompile Include="src\vm\vm_test.cpp" />
+    <ClCompile Include="src\tests\vm_test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ast\ast.hpp" />
@@ -252,18 +253,16 @@
     <ClInclude Include="src\bu\utilities.hpp" />
     <ClInclude Include="src\bu\wrapper.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
-    <ClInclude Include="src\lexer\lexer_test.hpp" />
     <ClInclude Include="src\bu\textual_error.hpp" />
     <ClInclude Include="src\lexer\token.hpp" />
     <ClInclude Include="src\lexer\token_formatting.hpp" />
     <ClInclude Include="src\parser\parser.hpp" />
     <ClInclude Include="src\parser\internals\parser_internals.hpp" />
-    <ClInclude Include="src\parser\parser_test.hpp" />
+    <ClInclude Include="src\tests\tests.hpp" />
     <ClInclude Include="src\vm\bytecode.hpp" />
     <ClInclude Include="src\vm\opcode.hpp" />
     <ClInclude Include="src\vm\virtual_machine.hpp" />
     <ClInclude Include="src\vm\vm_formatting.hpp" />
-    <ClInclude Include="src\vm\vm_test.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
