--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -211,6 +211,7 @@
     </ClCompile>
     <ClCompile Include="src\bu\source.cpp" />
     <ClCompile Include="src\compiler\size_of.cpp" />
+    <ClCompile Include="src\compiler\type_of.cpp" />
     <ClCompile Include="src\lexer\lexer.cpp" />
     <ClCompile Include="src\tests\lexer_test.cpp" />
     <ClCompile Include="src\bu\textual_error.cpp" />
@@ -254,6 +255,7 @@
     <ClInclude Include="src\bu\utilities.hpp" />
     <ClInclude Include="src\bu\wrapper.hpp" />
     <ClInclude Include="src\compiler\size_of.hpp" />
+    <ClInclude Include="src\compiler\type_of.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
     <ClInclude Include="src\bu\textual_error.hpp" />
     <ClInclude Include="src\lexer\token.hpp" />
