--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="src\compiler\size_of.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\compiler\type_of.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -159,6 +162,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\compiler\size_of.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\compiler\type_of.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
