--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -167,5 +167,8 @@
     <ClInclude Include="src\compiler\type_of.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\bu\flatmap.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
