--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -248,6 +248,7 @@
     <ClInclude Include="src\bu\bytestack.hpp" />
     <ClInclude Include="src\bu\color.hpp" />
     <ClInclude Include="src\bu\disable_unnecessary_warnings.hpp" />
+    <ClInclude Include="src\bu\flatmap.hpp" />
     <ClInclude Include="src\bu\noisy.hpp" />
     <ClInclude Include="src\bu\pooled_string.hpp" />
     <ClInclude Include="src\bu\source.hpp" />
