--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="src\compiler\scope.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\compiler\compiler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -168,6 +171,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\compiler\codegen_internals.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\compiler\compiler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
